--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "latest",
+    "lodash.throttle": "^4.1.1",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest"
